<resources>
<string name="app_name">GoTrackMyWay</string>

<string name="navMenuItems_main">Map</string>
<string name="navMenuItems_actions">Actions</string>
<string name="navMenuItems_statistic">Statistic</string>
<string name="navMenuItems_settings">Settings</string>
<string name="navMenuItems_about">About</string>


<string name="googleMapFragment_title">GoTrackMyWay</string>


<string name="statisticFragment_title">Statistic</string>
<string name="statisticFragment_tvId">Please, select ID:</string>
<string name="statisticFragment_tvLocations">All locations:</string>
<string name="statisticFragment_btnRemoveAll">Remove all ways</string>
<string name="statisticFragment_te_tooltip">Enter way for remove</string>
<string name="statisticFragment_btnRemoveById">Remove way by ID</string>

<string name="statisticFragment_row_TVLocationLabel">Location</string>
<string name="statisticFragment_row_TVLocationLatitude">LATITUDE:</string>
<string name="statisticFragment_row_TVLocationLongitude">LONGITUDE:</string>
<string name="statisticFragment_row_TVLocationLatitudeVal"></string>
<string name="statisticFragment_row_TVLocationLongitudeVal"></string>
<string name="statisticFragment_row_TVLocationWayId">Way Id</string>
<string name="statisticFragment_row_TVLocationWayIdVal"></string>


<string name="settingsFragment_title">Settings</string>
<string name="settingsFragment_min_request_period">Please, choose minimal data request period:</string>
<string name="settingsFragment_btn_1min_period">1 minute(TEST ONLY)</string>
<string name="settingsFragment_btn_15min_period">15 minutes</string>
<string name="settingsFragment_btn_30min_period">30 minutes</string>
<string name="settingsFragment_btn_60min_period">1 hour</string>


<string name="aboutFragment_title">About app.</string>
<string name="aboutFragment_descr">This application was developed while author studying Kotlin and development for android \nIn this app I also use basics of Google Map API</string>
<string name="aboutFragment_author">Author: alex_jdev@mail.ru</string>


<string name="actionsFragment_title">Actions</string>
<string name="actionsFragment_comment">Comment:</string>
<string name="actionsFragment_btn_start_tracking">Start tracking</string>
<string name="actionsFragment_btn_stop_tracking">Stop tracking</string>
<string name="actionsFragment_btn_get_location">Get current location</string>
<string name="actionsFragment_btn_save_location">Save current location</string>
<string name="actionsFragment_tvLat">LATITUDE:</string>
<string name="actionsFragment_tvLatVal"> </string>
<string name="actionsFragment_tvLng">LONGITUDE:</string>
<string name="actionsFragment_tvLngVal"> </string>


<string name="pref_interval_title">Choose tracking interval:</string>
<string name="pref_duplicate_title">Ignore last duplication of locations</string>

</resources>
