<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:minHeight="?listPreferredItemHeightLarge"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/statisticDlg_row_TVLocationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/statisticFragment_row_TVLocationLabel"
            android:textColor="@color/colorGREEN"/>

        <LinearLayout
            android:id="@+id/lay_one_location_row"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">





            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/statisticDlg_row_TVLocationLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/statisticFragment_row_TVLocationLatitude"
                    android:textColor="@color/colorBLUE"/>

                <TextView
                    android:id="@+id/statisticDlg_row_TVLocationLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statisticFragment_row_TVLocationLongitude"
                    android:textColor="@color/colorBLUE"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/statisticDlg_row_TVLocationLatitudeVal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statisticFragment_row_TVLocationLatitudeVal"
                    android:textColor="@color/colorRED"/>

                <TextView
                    android:id="@+id/statisticDlg_row_TVLocationLongitudeVal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statisticFragment_row_TVLocationLongitudeVal"
                    android:textColor="@color/colorRED"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/statisticDlg_row_TVWayId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statisticFragment_row_TVLocationWayId"/>

                <TextView
                    android:id="@+id/statisticDlg_row_TVWayIdVal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statisticFragment_row_TVLocationWayIdVal"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>