<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="50dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/actionsDlgBtnStartTracking"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="22dp"
            android:text="@string/actionsFragment_btn_start_tracking"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="20dp"
            app:iconTint="#a4c639"
            app:rippleColor="@color/colorAccent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/actionsDlgBtnStopTracking"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"

            android:text="@string/actionsFragment_btn_stop_tracking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.76"
            app:layout_constraintStart_toEndOf="@+id/actionsDlgBtnStartTracking"
            tools:layout_editor_absoluteY="0dp"

            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="20dp"
            app:iconTint="#a4c639"
            app:rippleColor="@color/colorAccent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/actionsDlgTVLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/actionsFragment_tvLat"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/actionsDlgTVLatVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/actionsFragment_tvLatVal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/actionsDlgTVLng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/actionsFragment_tvLng"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/actionsDlgTVLngVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/actionsFragment_tvLngVal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />
    </LinearLayout>


</LinearLayout>