<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="5dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">



    <TextView
        android:id="@+id/statisticDlg_TVlocations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/statisticFragment_tvLocations"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statisticDlg_rvLocations"
        android:layout_width="match_parent"
        android:layout_height="460dp" >

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/statisticDlg_BtnRemoveAll"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/statisticFragment_btnRemoveAll"

            app:backgroundTint="@color/colorRED"
            app:cornerRadius="20dp"
            app:iconTint="#a4c639"
            app:rippleColor="@color/colorAccent" />

        <EditText
            android:id="@+id/statisticDlg_ETSelectedId"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/statisticFragment_te_tooltip"
            android:inputType="numberDecimal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/statisticDlg_BtnRemoveById"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/statisticFragment_btnRemoveById"

            app:backgroundTint="@color/colorRED"
            app:cornerRadius="20dp"
            app:iconTint="#a4c639"
            app:rippleColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>
